# phosphobot

./: .gitattributes  .gitignore  .gitmodules  HOW_TO_RUN.md  INSTALL_FOR_BEGINNERS.md  Makefile  SERVO_EEPROM_LIMITS.md  install.sh
calibration/: so-100_5AB0179998_config.json  so-100_5AB0182019_config.json  so-100_5AE6055497_config.json  so-100_5AE6083706_config.json
dashboard/: index.html
dashboard/src/: App.tsx  index.css
dashboard/src/components/callout/: phospho-pro.tsx  phospho-vr.tsx
dashboard/src/components/common/: add-robot-connection.tsx  app-sidebar.tsx
dashboard/src/components/layout/: footer.tsx  sidebar.tsx  topbar.tsx
dashboard/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx
dashboard/src/pages/: AIControlPage.tsx  AITrainingPage.tsx  AdminSettingsPage.tsx  BrowsePage.tsx  DashboardPage.tsx  NetworkPage.tsx  OBSTelemetryOverlayPage.tsx  ROS2BridgePage.tsx
dashboard/src/pages/auth/: AuthForm.tsx
dashboard/src/pages/calibration/: calibration-sequence.tsx
phosphobot/: pyproject.toml
phosphobot/docs/: SERVO_EEPROM_LIMITS.md
phosphobot/phosphobot/: _version.py  app.py  main.py  robot.py  utils.py
phosphobot/phosphobot/endpoints/: __init__.py  pages.py  ros2.py
phosphobot/phosphobot/hardware/: base.py  sim.py  so100.py
phosphobot/scripts/: set_eeprom_limits.py
scripts/: close_phospho_ports.sh  fix_ros2_apt_signedby.sh  install_ros2_humble.sh
simulation/pybullet/: main.py
so-arm101-ros2-bridge/: ISAAC_SIM_SETUP.md  PHOSPHO_INTEGRATION.md  README.md
so-arm101-ros2-bridge/IsaacSim_USD/: Rounded cube.stl  Rounded cube.usd  Untitled.fbx
so-arm101-ros2-bridge/src/phospho_teleop/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
so-arm101-ros2-bridge/src/phospho_teleop/config/: phospho_teleop.yaml
so-arm101-ros2-bridge/src/phospho_teleop/demo/: complete_phospho_demo.py  phospho_demo.py  simple_demo.py  test_phospho_control.py  test_server.py
so-arm101-ros2-bridge/src/phospho_teleop/launch/: phospho_leader_follower.launch.py  phospho_teleop.launch.py
so-arm101-ros2-bridge/src/phospho_teleop/phospho_teleop/: phospho_http_teleop.py  phospho_leader_controller.py  phospho_status_monitor.py  phospho_teleop_node.py
so-arm101-ros2-bridge/src/phospho_teleop/resource/: phospho_teleop
so-arm101-ros2-bridge/src/phospho_teleop/scripts/: phospho_http_teleop  phospho_leader_controller  phospho_status_monitor  phospho_teleop_node  setup_isaac_relays.sh
so-arm101-ros2-bridge/src/phospho_teleop/test/: test_phospho_teleop.py
(+6 files in other folders)
